<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    android:layout_width="0dp"
    android:layout_height="?attr/actionBarSize"
    app:navigationIcon="@drawable/baseline_arrow_back_24"
    app:title="Second Screen"
    app:titleCentered="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <View
    android:id="@+id/border"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/descriptionText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:textSize="16sp"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    app:layout_constraintTop_toBottomOf="@id/border"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="RtlSymmetry" />

  <TextView
    android:id="@+id/nameText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:paddingStart="16dp"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/descriptionText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="RtlSymmetry" />

  <TextView
    android:id="@+id/selectedUserName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/selected_user_name"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/nameText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/chooseButton"
    app:layout_constraintEnd_toEndOf="parent"/>

  <Button
    android:id="@+id/chooseButton"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="25dp"
    android:backgroundTint="@color/navy"
    android:text="@string/choose_a_user"
    app:cornerRadius="10dp"
    android:textColor="#fff"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>